Name:               postmark-demo
Version:            0.0.1
License:            BSD3
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          Mark Hibberd
Synopsis:           Demo package for Library for postmarkapp.com HTTP Api
Category:           Experimental
Description:        Demo package for Library for postmarkapp.com HTTP Api
Homepage:           https://github.com/ApiEngine/postmark
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         https://github.com/ApiEngine/postmark.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          postmark-demo
  Hs-Source-Dirs:
                    ../../src .

  Main-Is:
                    Main.hs

  Build-Depends:
                   base >= 3 && < 5

